--- a/BedrockBoot/Controls/TaskCard.xaml
+++ b/BedrockBoot/Controls/TaskCard.xaml
@@ -19,6 +19,7 @@
             <Button
                 x:Name="Button"
                 Padding="4"
+                Visibility="{x:Bind _IsCloseButtonVisible}"
                 HorizontalAlignment="Stretch"
                 Click="CloseButton_Click"
                 Content="{dev:FontIcon Glyph=&#xE711;}"
