--- a/BedrockBoot/Pages/SettingsPage.xaml
+++ b/BedrockBoot/Pages/SettingsPage.xaml
@@ -112,6 +112,13 @@
                         Style="{StaticResource Subtitle}"
                         Text="个性化" />
 
+                    <InfoBar IsOpen="True"
+                             IsClosable="False"
+                             Message="出于技术原因，修改背景需要重新启动 BedrockBoot。"
+                             Title="技术缺失警告"
+                             Severity="Warning"
+                             HorizontalAlignment="Stretch"></InfoBar>
+
                     <dev:SettingsExpander
                         Description="启动器背景样式"
                         Header="背景"
@@ -120,68 +127,80 @@
                             <dev:SettingsCard>
                                 <dev:SettingsCard.Header>
                                     <RadioButton GroupName="BackgroundModel" 
-                                                 Click="BackgroundModel_Base_OnClick"
-                                                 x:Name="Background_None_RadioButton"
-                                                 Tag="None">无</RadioButton>
+                         Click="BackgroundModel_Base_OnClick"
+                         x:Name="Background_None_RadioButton"
+                         Tag="None">无</RadioButton>
                                 </dev:SettingsCard.Header>
                             </dev:SettingsCard>
 
                             <dev:SettingsCard>
                                 <dev:SettingsCard.Header>
                                     <RadioButton GroupName="BackgroundModel" 
-                                                 Click="BackgroundModel_Base_OnClick"
-                                                 x:Name="Background_Mica_RadioButton"
-                                                 Tag="Mica">云母 (Mica)</RadioButton>
+                         Click="BackgroundModel_Base_OnClick"
+                         x:Name="Background_Mica_RadioButton"
+                         Tag="Mica">云母 (Mica)</RadioButton>
                                 </dev:SettingsCard.Header>
                             </dev:SettingsCard>
 
                             <dev:SettingsCard>
                                 <dev:SettingsCard.Header>
                                     <RadioButton GroupName="BackgroundModel" 
-                                                 Click="BackgroundModel_Base_OnClick"
-                                                 x:Name="Background_BaseAlt_RadioButton"
-                                                 Tag="BaseAlt">通透云母 (BaseAlt)</RadioButton>
+                         Click="BackgroundModel_Base_OnClick"
+                         x:Name="Background_BaseAlt_RadioButton"
+                         Tag="BaseAlt">通透云母 (BaseAlt)</RadioButton>
                                 </dev:SettingsCard.Header>
                             </dev:SettingsCard>
 
                             <dev:SettingsCard>
                                 <dev:SettingsCard.Header>
                                     <RadioButton GroupName="BackgroundModel" 
-                                                 Click="BackgroundModel_Base_OnClick"
-                                                 x:Name="Background_Acrylic_RadioButton"
-                                                 Tag="Acrylic">亚克力 (Acrylic)</RadioButton>
+                         Click="BackgroundModel_Base_OnClick"
+                         x:Name="Background_Acrylic_RadioButton"
+                         Tag="Acrylic">亚克力 (Acrylic)</RadioButton>
                                 </dev:SettingsCard.Header>
                             </dev:SettingsCard>
 
                             <dev:SettingsCard>
                                 <dev:SettingsCard.Header>
                                     <RadioButton GroupName="BackgroundModel" 
-                                                 x:Name="Background_Color_RadioButton"
-                                                 Click="BackgroundModel_Base_OnClick"
-                                                 Tag="Color">纯色</RadioButton>
+                         x:Name="Background_Color_RadioButton"
+                         Click="BackgroundModel_Base_OnClick"
+                         Tag="Color"
+                         IsEnabled="False">纯色</RadioButton>
                                 </dev:SettingsCard.Header>
                             </dev:SettingsCard>
 
                             <dev:SettingsCard>
                                 <dev:SettingsCard.Header>
                                     <RadioButton GroupName="BackgroundModel" 
-                                                 x:Name="Background_Image_RadioButton"
-                                                 Click="BackgroundModel_Base_OnClick"
-                                                 Tag="Image">图片</RadioButton>
+                         x:Name="Background_Image_RadioButton"
+                         Click="BackgroundModel_Base_OnClick"
+                         Tag="Image"
+                         IsEnabled="False">图片</RadioButton>
                                 </dev:SettingsCard.Header>
                             </dev:SettingsCard>
 
                             <dev:SettingsCard>
                                 <dev:SettingsCard.Header>
                                     <RadioButton GroupName="BackgroundModel" 
-                                                 x:Name="Background_RSkin_RadioButton"
-                                                 Click="BackgroundModel_Base_OnClick" 
-                                                 Tag="RSkin"
-                                                 IsEnabled="False">Round Studio 通用主题包</RadioButton>
+                         x:Name="Background_RSkin_RadioButton"
+                         Click="BackgroundModel_Base_OnClick" 
+                         Tag="RSkin"
+                         IsEnabled="False">Round Studio 通用主题包</RadioButton>
                                 </dev:SettingsCard.Header>
                             </dev:SettingsCard>
                         </dev:SettingsExpander.Items>
                     </dev:SettingsExpander>
+
+                    <dev:SettingsCard Description="启动器的这个原图"
+                                      Header="主题"
+                                      HeaderIcon="{dev:FontIcon Glyph=&#xE793;}">
+                        <ComboBox SelectedIndex="2">
+                            <ComboBoxItem>明亮</ComboBoxItem>
+                            <ComboBoxItem>黑暗</ComboBoxItem>
+                            <ComboBoxItem>跟随系统</ComboBoxItem>
+                        </ComboBox>
+                    </dev:SettingsCard>
 
                     <TextBlock
                         Margin="0,10,0,0"
