--- a/BedrockBoot/Styles/Styles.xaml
+++ b/BedrockBoot/Styles/Styles.xaml
@@ -1,17 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <x:Double x:Key="TitleBarCompactHeight">48</x:Double>
 
     <Thickness x:Key="ContentPageMargin">40,0,40,0</Thickness>
     <Thickness x:Key="ContentPagePadding">0,0,0,0</Thickness>
-
-    <LinearGradientBrush x:Key="SystemBlueLinearGradientBrush">
-        <LinearGradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Offset="0" Color="#1493DF" />
-                <GradientStop Offset="1" Color="#0669BC" />
-            </GradientStopCollection>
-        </LinearGradientBrush.GradientStops>
-    </LinearGradientBrush>
 </ResourceDictionary>
