--- a/BedrockBoot/Pages/HomePage.xaml
+++ b/BedrockBoot/Pages/HomePage.xaml
@@ -10,24 +10,29 @@
     mc:Ignorable="d">
 
     <Grid>
-        <SplitButton x:Name="LauncherButton"
-                     HorizontalAlignment="Right"
-                     VerticalAlignment="Bottom"
-                     Margin="15"
-                     Width="180"
-                     Height="52">
+
+        <dev:ConfettiCannon x:Name="ConfettiCannonSample" />
+        <SplitButton
+            x:Name="LauncherButton"
+            Width="180"
+            Height="52"
+            Margin="15"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Click="LauncherButton_Click">
             <SplitButton.Flyout>
-                <Flyout Placement="Auto">
-                    
-                </Flyout>
+                <Flyout Placement="Auto" />
             </SplitButton.Flyout>
             <SplitButton.Content>
                 <StackPanel>
                     <TextBlock FontSize="16">启动游戏</TextBlock>
-                    <TextBlock FontSize="11" 
-                               HorizontalAlignment="Center"
-                               Margin="0,2,0,0"
-                               Foreground="Gray">Version</TextBlock>
+                    <TextBlock
+                        Margin="0,2,0,0"
+                        HorizontalAlignment="Center"
+                        FontSize="11"
+                        Foreground="Gray">
+                        Version
+                    </TextBlock>
                 </StackPanel>
             </SplitButton.Content>
         </SplitButton>
