--- a/BedrockBoot/Pages/DownloadPages/VersionsShowPages.xaml
+++ b/BedrockBoot/Pages/DownloadPages/VersionsShowPages.xaml
@@ -21,16 +21,20 @@
                 IsClickEnabled="True"
                 Tag="{x:Bind}">
                 <dev:SettingsCard.HeaderIcon>
-                    <ImageIcon Source="/Assets/Release_Icon.png"
-                               Width="48" Height="48"/>
+                    <ImageIcon
+                        Width="48"
+                        Height="48"
+                        Source="/Assets/Release_Icon.png" />
                 </dev:SettingsCard.HeaderIcon>
             </dev:SettingsCard>
         </DataTemplate>
     </Page.Resources>
     <Grid>
         <Grid>
-            <Grid HorizontalAlignment="Stretch"
-                  VerticalAlignment="Top" MaxWidth="1000">
+            <Grid
+                MaxWidth="1000"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Top">
                 <StackPanel
                     Margin="5"
                     HorizontalAlignment="Left"
@@ -52,8 +56,8 @@
                         x:Name="VersionType"
                         Margin="5"
                         SelectedIndex="0"
-                        SelectionMode="Single"
-                        SelectionChanged="VersionType_OnSelectionChanged">
+                        SelectionChanged="VersionType_OnSelectionChanged"
+                        SelectionMode="Single">
 
                         <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE7FC;}" ToolTipService.ToolTip="正式版" />
                         <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE8A1;}" ToolTipService.ToolTip="预览版" />
@@ -61,36 +65,47 @@
                     </controls:Segmented>
                     <Button>导入Appx</Button>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal"
-                            Margin="5"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Top">
-                    <AutoSuggestBox Height="32" MinWidth="200" MaxWidth="500"
-                             Margin="0,5,0,0"
-                             QueryIcon="Find"
-                             TextChanged="AutoSuggestBox_TextChanged"
-                             x:Name="SearchBox"
-                             PlaceholderText="搜索"
-                             VerticalAlignment="Center"></AutoSuggestBox>
+                <StackPanel
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Orientation="Horizontal">
+                    <AutoSuggestBox
+                        x:Name="SearchBox"
+                        Height="32"
+                        MinWidth="200"
+                        MaxWidth="500"
+                        Margin="0,5,0,0"
+                        VerticalAlignment="Center"
+                        PlaceholderText="搜索"
+                        QueryIcon="Find"
+                        TextChanged="AutoSuggestBox_TextChanged" />
                 </StackPanel>
             </Grid>
             <Grid Margin="0,64,0,10">
-                <ScrollViewer HorizontalAlignment="Stretch"
-                              x:Name="ScrollViewList">
+                <ScrollViewer x:Name="ScrollViewList" HorizontalAlignment="Stretch">
                     <Grid>
                         <ItemsRepeater
-                            Grid.Column="1"
-                            HorizontalAlignment="Stretch"
                             x:Name="VersionList"
+                            Grid.Column="1"
+                            MaxWidth="1000"
+                            HorizontalAlignment="Stretch"
                             ItemTemplate="{StaticResource VersionCardTemplate}"
-                            ItemsSource="{x:Bind VersionItems, Mode=OneWay}"
-                            MaxWidth="1000">
+                            ItemsSource="{x:Bind VersionItems, Mode=OneWay}">
                             <ItemsRepeater.Layout>
                                 <StackLayout Spacing="5" />
                             </ItemsRepeater.Layout>
                         </ItemsRepeater>
                     </Grid>
                 </ScrollViewer>
+                <dev:GotoTop
+                    Margin="0,0,20,20"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Animated="True"
+                    AutoHiding="True"
+                    Background="{ThemeResource AcrylicInAppFillColorDefaultBrush}"
+                    Target="{Binding ElementName=ScrollViewList}" />
             </Grid>
         </Grid>
     </Grid>
